# what-the-particle

./: .coverage  .gitignore  .pre-commit-config.yaml  ADDITIONAL_CI_FIXES.md  CI_FIXES_SUMMARY.md  CI_SETUP_SUMMARY.md  CLAUDE.md  DOCKER_BUILD_FIX.md  Dockerfile  INTEGRATION_TEST_FIX.md  Justfile  PARTICLE_PHYSICS_MODERNIZATION.md  README.md  coverage.xml  generate_data.py  pyproject.toml  run.sh
.github/workflows/: ci.yml
backend/: __init__.py  main.py  requirements.txt
frontend/: package-lock.json  package.json  svelte.config.js  tailwind.config.js
frontend/.svelte-kit/: ambient.d.ts
frontend/.svelte-kit/output/client/.vite/: manifest.json
frontend/.svelte-kit/output/client/_app/: version.json
frontend/.svelte-kit/output/client/_app/immutable/assets/: 0.49f47a38.css  _layout.093298b7.css
frontend/.svelte-kit/output/client/_app/immutable/chunks/: index.62dc93b3.js  scheduler.2d2d190c.js  singletons.37de2947.js  singletons.eee0e22c.js
frontend/.svelte-kit/output/client/_app/immutable/entry/: app.394ec369.js  app.4c01dc20.js  start.8de73d5a.js  start.b48acadc.js
frontend/.svelte-kit/output/client/_app/immutable/nodes/: 0.d3dc98f4.js  0.ef6a59b0.js  1.34868fe3.js  1.70ac5f7d.js  2.02037524.js  2.751eeabf.js
frontend/.svelte-kit/output/server/: manifest-full.js
frontend/.svelte-kit/output/server/.vite/: manifest.json
frontend/.svelte-kit/output/server/chunks/: internal.js  ssr.js
frontend/.svelte-kit/output/server/entries/pages/: _layout.svelte.js  _page.svelte.js
frontend/.svelte-kit/output/server/nodes/: 0.js  1.js  2.js
frontend/src/: app.css  app.html
frontend/src/lib/components/: LaTeX.svelte  ParticleCard.svelte  PopularParticles.svelte  SearchBar.svelte
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/pdgid/[id]/: +page.svelte
frontend/static/: .gitkeep  404.html
tests/: __init__.py  conftest.py  test_api.py  test_integration.py
